Created new component - Form component

--- a/src/Components/Variables.scss
+++ b/src/Components/Variables.scss
@@ -1,3 +1,20 @@
+//background
+
 $color-bg-dark: #31254B;
 $color-bg-light: #5F4B8B;
+$color-bg-darker: #251A3C;
+
+//common color 
 $color-light-grey: #F2F2F2;
+$color-orange: #E69A8D;
+$color-disabled-text: #828282;
+
+//gradient button
+$gradient-button-primary: linear-gradient(to right, #E16565, #E69A8D);
+$gradient-button-danger: linear-gradient(to right, #AD3333, #C2513E);
+$gradient-button-success: linear-gradient(to right, #86AF72, #6897BA);
+
+//table color
+$gradient-bg-row-default: linear-gradient(to right, #5F4B8B, #4B4E8B);
+$gradient-bg-row-orange: linear-gradient(to right, #AF4848, #773D34);
+$gradient-bg-row-green: linear-gradient(to right, #5D8246, #2B513F);
