--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,21 @@
 @import './Components/Variables.scss';
 
-#app{
-  background: $color-bg-dark;
+*{
+  color: $color-light-grey;
 }
 
+
+.link-style-green{
+  background: $gradient-button-success;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+
+}
+.link-style-green:hover{
+  cursor: pointer;
+
+}
+.shadowed-text{
+  text-shadow: 0px 2px 2px rgba(0,0,0,.8)
+}
