--- a/src/Components/Guest/Guest.scss
+++ b/src/Components/Guest/Guest.scss
@@ -1,22 +1,35 @@
 @import '../Variables.scss';
 
+.login-container{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
 .particle-bg{
   position: absolute;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   z-index: -5;
   background: $color-bg-dark;
+  width: 100%;
+  height: 100%;
+  // fix the overflow for firefox
+  overflow: hidden; 
 }
-
+.bs{
+}
 .form-container{
   display: flex;
   flex-direction: column;
   margin: auto auto;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
 
 
