--- a/src/App.scss
+++ b/src/App.scss
@@ -19,3 +19,107 @@
 .shadowed-text{
   text-shadow: 0px 2px 2px rgba(0,0,0,.8)
 }
+
+#app.logged-in{
+  background: $color-bg-dark;
+  padding-left: 21vw;
+
+}
+.app-container{
+  font-weight: normal;
+}
+
+.header{
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.container-row{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.container-col{
+  display: flex;
+  flex-direction: column;
+}
+
+.container-ctr{
+  justify-content: center;
+  align-items: center;
+}
+
+.spc-ev{
+  justify-content: space-evenly;
+}
+
+.ta-ctr{
+  text-align: center;
+}
+
+.ml-15{
+  margin-left: 15px;
+}
+.mr-15{
+  margin-right: 15px;
+}
+.mt-15{
+  margin-top: 15px;
+}
+.mb-15{
+  margin-bottom: 15px;
+}
+.ml-auto{
+  margin-left: auto !important;
+}
+.mr-auto{
+  margin-right: auto !important;
+}
+
+input[disabled]{
+  color: $color-disabled-text;
+}
+
+//custom Radio
+
+input[type="radio"]{
+  cursor: pointer;
+  margin: 0 5px;
+  &:before{
+    content: '';
+    display: block;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    background: $color-bg-dark;
+    position: relative;
+    z-index: 4;
+    top: -1px;
+    left: -1px;
+    border: 1px solid $color-orange;
+    
+  }
+  
+  display: inline;
+
+  &:checked{
+    &:after{
+      content: '';
+      display: block;
+      position: relative;
+      z-index: 5;
+      border-radius: 50%;
+      top: -13.3px;
+      left: 3.8px;
+      width: 7.5px;
+      height: 7.5px;
+      border: 0px solid black;
+      background: $color-bg-dark;
+    }
+    &:before{
+      background: $color-orange;
+      transition: 300ms all;
+    }
+  }
+}
