--- a/src/Components/Util/FormInput/FormInput.scss
+++ b/src/Components/Util/FormInput/FormInput.scss
@@ -8,17 +8,18 @@
   color: $color-light-grey;
   border: 1px solid $color-light-grey;
   line-height: 1.5;
-  box-shadow: 0px 3px 5px rgba(0,0,0,.7);
+  box-shadow: 0px 3px 5px rgba(0,0,0,.5);
   letter-spacing: 2px;
   box-sizing: border-box;
+  outline: none;
   
 }
 .form-input:invalid{
-  box-shadow: 0px 3px 5px $color-button-danger;
+  box-shadow: 0px 3px 5px rgba(darken($color-orange, 50%), .3);
 }
 
 .form-input:valid{
-  box-shadow: 0px 3px 5px $color-button-success;
+  box-shadow: 0px 3px 5px rgba($color-green, .3);
 }
 .form-input.password{
   padding-right: 45px;
