--- a/src/Components/Util/FormInputDate/FormInputDate.scss
+++ b/src/Components/Util/FormInputDate/FormInputDate.scss
@@ -41,8 +41,9 @@
   cursor: pointer;
 }
 
-i.icon{
+i.icon-date{
   border-left: 0;
   color: $color-disabled-text;
   cursor: initial !important;
+  
 }
