--- a/src/Components/Util/ModalAndLogin/Modal.scss
+++ b/src/Components/Util/ModalAndLogin/Modal.scss
@@ -3,8 +3,8 @@
 .modal{
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
+  left: 20vw;
+  width: 80vw;
   height: 100vh;
   display: flex;
   z-index: 10;
