--- a/src/Components/Util/ButtonPrimary/ButtonPrimary.scss
+++ b/src/Components/Util/ButtonPrimary/ButtonPrimary.scss
@@ -11,6 +11,8 @@
   padding: 5px 0;
   border: 0;
   box-shadow: 0px 3px 3px rgba(0,0,0,.7);
+  outline: none;
+  position: relative;
 }
 
 .button-primary:hover{
@@ -18,5 +20,8 @@
 }
 .button-primary:active{
   box-shadow: 0px 1px 3px rgba(0,0,0,.7);
-  transition: 300ms all;
+  top: 1px;
+  left: 1px;
+  transition: 100ms all;
+
 }
