--- a/src/Components/Util/ModalAndLogin/Modal.css
+++ b/src/Components/Util/ModalAndLogin/Modal.css
@@ -1,8 +1,8 @@
 .modal {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
+  left: 20vw;
+  width: 80vw;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
