--- a/src/App.scss
+++ b/src/App.scss
@@ -50,9 +50,8 @@
   justify-content: center;
   align-items: center;
 }
-
 .container-header{
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-shrink: 0;
 }
@@ -119,8 +118,23 @@
 input[disabled]{
   color: $color-disabled-text;
 }
+input:focus, textarea:focus{
+  background: darken($color-bg-light,10%) !important;
+  transition: 300ms all !important;
+}
 
+.uneven-form .form-wrapper:last-child{
+  margin: 23px auto;
+  margin-bottom: 0;
+}
 
+.uneven-form input[type="radio"]{
+  margin-right: 0;
+}
+
+.label-ls-0 label{ 
+  letter-spacing: 0;
+}
 //custom Radio
 
 input[type="radio"]{
