--- a/src/Components/Util/Card/Card.css
+++ b/src/Components/Util/Card/Card.css
@@ -15,3 +15,18 @@
 .m-5 {
   margin: 15px;
 }
+
+.card-link {
+  text-decoration: none;
+}
+
+.card-link:hover {
+  color: #dd7563;
+  -webkit-transition: 300ms all;
+  transition: 300ms all;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.card a {
+  outline: none;
+}
