--- a/src/App.css
+++ b/src/App.css
@@ -102,10 +102,28 @@
   width: 21.4vw;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .spc-ev {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+.spc-bt {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.ta-left {
+  text-align: left;
+}
+
+.full-width {
+  width: 100%;
 }
 
 .ta-ctr {
@@ -197,4 +215,63 @@ input[type="radio"]:checked:before {
   background: #E69A8D;
   -webkit-transition: 300ms all;
   transition: 300ms all;
+}
+
+.container-row {
+  -webkit-animation-name: animateDown;
+          animation-name: animateDown;
+  -webkit-animation-delay: 300ms;
+          animation-delay: 300ms;
+  -webkit-animation-duration: 150ms;
+          animation-duration: 150ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+          animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+
+@-webkit-keyframes animateDown {
+  from {
+    margin-top: -10px !important;
+  }
+  to {
+    margin-top: 20px !important;
+  }
+}
+
+@keyframes animateDown {
+  from {
+    margin-top: -10px !important;
+  }
+  to {
+    margin-top: 20px !important;
+  }
+}
+
+.date-modal {
+  width: 35%;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
+.mb-10 {
+  margin-left: 10px;
 }
