--- a/src/App.scss
+++ b/src/App.scss
@@ -87,11 +87,22 @@
 .form-control.date input{
   width: 21.4vw;
 }
-
+.bold{
+  font-weight: bold;
+}
 .spc-ev{
   justify-content: space-evenly;
 }
 
+.spc-bt{
+  justify-content: space-between;
+}
+.ta-left{
+  text-align: left;
+}
+.full-width{
+  width: 100%;
+}
 .ta-ctr{
   text-align: center;
 }
@@ -176,4 +187,45 @@ input[type="radio"]{
       transition: 300ms all;
     }
   }
+}
+
+
+.container-row{
+  animation-name: animateDown;
+  animation-delay: 300ms;
+  animation-duration: 150ms;
+  animation-fill-mode: forwards;
+  animation-direction: normal;
+  animation-iteration-count: 1;
+  animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+
+}
+
+@keyframes animateDown{
+  from{
+    margin-top: -10px !important;
+  }
+  to{
+    margin-top: 20px !important;
+  }
+}
+
+.date-modal{
+  width: 35%;
+}
+.react-datepicker-wrapper{
+  width: 100%;
+}
+
+.mt-10{
+  margin-top: 10px;
+}
+.mr-10{
+  margin-right: 10px;
+}
+.ml-10{
+  margin-left: 10px;
+}
+.mb-10{
+  margin-left: 10px;
 }
