--- a/src/Components/Util/Card/Card.scss
+++ b/src/Components/Util/Card/Card.scss
@@ -12,6 +12,9 @@
 .card-title{
   font-weight: normal;
   font-size: 2em;
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
 }
 .m-5{
   margin: 15px;
