--- a/src/Components/Util/ReportTable/ReportTable.scss
+++ b/src/Components/Util/ReportTable/ReportTable.scss
@@ -42,12 +42,14 @@
 .report-row .table-data:nth-child(6){
   width: 100px;
 }
-
 .report-head .table-head:nth-child(7){
-  margin-left: 155px;
+  margin-left: 25px;
+}
+.report-head .table-head:nth-child(8){
+  margin-left: 70px;
 }
 
-.report-row .table-data:nth-child(7){
-  width: 250px;
-  margin-left: 50px;
+.report-row .table-data:nth-child(8){
+  width: 200px;
+  margin-left: 30px;
 }
