--- a/src/Components/Permissions/AddPermission/AddPermission.css
+++ b/src/Components/Permissions/AddPermission/AddPermission.css
@@ -1,3 +1,13 @@
+.scrollable-modal {
+  overflow-y: scroll;
+  height: 90vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-top: 25vh;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
 .attachment-photo .form-control {
   width: 10%;
 }
