--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,11 @@
   cursor: initial;
 }
 
+.red {
+  color: #ff8686 !important;
+  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
+}
+
 .form-control.date input {
   width: 21.4vw;
 }
