--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -56,10 +56,18 @@
   background: #5F4B8B;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -80vw;
   -webkit-box-shadow: 5px 0px 3px rgba(0, 0, 0, 0.2);
           box-shadow: 5px 0px 3px rgba(0, 0, 0, 0.2);
   font-size: 1.2em;
+  -webkit-transition: 300ms all;
+  transition: 300ms all;
+}
+
+.active-sidebar {
+  left: 0;
+  -webkit-transition: 300ms all;
+  transition: 300ms all;
 }
 
 .sidebar-links * {
@@ -91,4 +99,34 @@
   padding-left: 0px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.toggle-sidebar {
+  display: none;
+}
+
+@media only screen and (max-width: 400px) {
+  .toggle-sidebar {
+    display: block;
+    position: fixed;
+    opacity: 0.8;
+    z-index: 1;
+    border: 1px solid #E69A8D;
+    margin: 15px;
+    border-radius: 10px;
+    padding: 7px 15px;
+    cursor: pointer;
+    background: #251A3C;
+    -webkit-box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+            box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+  }
+  .pd-l-sidebar {
+    padding-left: 0 !important;
+  }
+  .sidebar-container {
+    width: 80vw;
+  }
+  .logo, .logo + h3 {
+    margin-top: 70px;
+  }
 }
