--- a/src/Components/Util/ModalAndLogin/Modal.scss
+++ b/src/Components/Util/ModalAndLogin/Modal.scss
@@ -16,3 +16,10 @@
 .modal.blurry ~ *{
   filter: blur(2px)
 }
+
+@media only screen and (max-width: 420px){
+  .modal{
+    left: 0;
+    width: 100vw;
+  }
+}
