--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -105,14 +105,14 @@
   display: none;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
   .toggle-sidebar {
     display: block;
     position: fixed;
     opacity: 0.8;
-    z-index: 1;
+    z-index: 2;
     border: 1px solid #E69A8D;
-    margin: 15px;
+    margin: 0px 10px;
     border-radius: 10px;
     padding: 7px 15px;
     cursor: pointer;
@@ -125,11 +125,20 @@
   }
   .sidebar-container {
     width: 80vw;
+    z-index: 1;
   }
   .logo, .logo + h3 {
-    margin-top: 70px;
+    margin-top: 30px;
   }
   .form-control {
     width: 72.5vw;
+  }
+  .wrapper-form {
+    width: 90%;
+  }
+  .container-row.table {
+    -ms-flex-wrap: nowrap !important;
+        flex-wrap: nowrap !important;
+    width: 300% !important;
   }
 }
