--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -92,14 +92,14 @@
   display: none;
 }
 
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 420px){
   .toggle-sidebar{
     display: block;
     position: fixed;
     opacity: 0.8;
-    z-index: 1;
+    z-index: 2;
     border: 1px solid $color-orange;
-    margin: 15px;
+    margin: 0px 10px;
     border-radius: 10px;
     padding: 7px 15px;
     cursor: pointer;
@@ -112,12 +112,21 @@
   }
   .sidebar-container{
     width: 80vw;
+    z-index: 1;
   }
   .logo, .logo + h3{
-    margin-top: 70px
+    margin-top: 30px
   }
   .form-control{
     width: 72.5vw;
+  }
+  .wrapper-form{
+    width: 90%;
+  }
+
+  .container-row.table{
+    flex-wrap: nowrap !important;
+    width: 300% !important;
   }
   
 }
